metadata/unpackaged/objects/Related_Document__c.object
<CustomObject>
    <description>Custom object used to create hyperlinks to supporting documents related to the opportunity that are located on the internal network. Users must have access to the respective network directories to view the hyperlink target.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Documents</relationshipLabel>
        <relationshipName>R00N300000011VpMEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Click_to_View__c</fullName>
        <formula>HYPERLINK(&quot;file://&quot; &amp;  Network_Path__c , &quot;View&quot;)</formula>
        <label>Click to View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Related Documents</relationshipLabel>
        <relationshipName>R00N300000011Vx0EAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Network_Path__c</fullName>
        <description>Text field for entering a path to a network folder or document. Use the following syntax:
For MS-Windows:    \\servername\folder\subfolder\...\filename.ext
For Unix:    servername/folder/subfolder/.../filename</description>
        <label>Network Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Related Documents</relationshipLabel>
        <relationshipName>R00N300000011FhVEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Related Document</label>
    <nameField>
        <label>Related Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>